# mypycounts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/mypycounts/: __init__.py  datasets.py  mypycounts.py  plotting.py
src/mypycounts/metrics/: __init__.py  metrics.py
tests/: test_metrics.py  test_mypycounts.py
