[tool.poetry]
name = "mypycounts"
version = "0.1.0"
description = "A package for counting words and others."
authors = ["Emmanuel Arkoh-Nelson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
